// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home: Hero renders correctly 1`] = `
<div
  className="container-fluid"
  id="hero-image"
>
  <div
    className="row mx-auto"
    id="hero-image-text"
  >
    <div
      className="col align-self-center"
    >
      <div
        className="row justify-content-center align-items-center mb-3"
      >
        <div
          className="col-12"
        >
          <h3>
            Search for a Recipe
          </h3>
        </div>
        <div
          className="col-8 py-4"
        >
          <SearchForm
            handleSearch={[Function]}
            handleSearchInput={[Function]}
            searchValue=""
            size="lg"
          />
        </div>
      </div>
      <Button
        className="btn-default btn-lg"
        color="secondary"
        id="home-add-recipe-btn"
        onClick={[Function]}
        tag="button"
        title="New Recipe"
      >
        Add a New Recipe
      </Button>
    </div>
  </div>
</div>
`;

exports[`Home: Hero renders correctly when mouted fully 1`] = `
<Hero
  dispatch={[Function]}
  handleSearch={[Function]}
  handleSearchInput={[Function]}
  searchValue=""
>
  <div
    className="container-fluid"
    id="hero-image"
  >
    <div
      className="row mx-auto"
      id="hero-image-text"
    >
      <div
        className="col align-self-center"
      >
        <div
          className="row justify-content-center align-items-center mb-3"
        >
          <div
            className="col-12"
          >
            <h3>
              Search for a Recipe
            </h3>
          </div>
          <div
            className="col-8 py-4"
          >
            <SearchForm
              handleSearch={[Function]}
              handleSearchInput={[Function]}
              searchValue=""
              size="lg"
            >
              <Form
                id="search-form"
                onSubmit={[Function]}
                tag="form"
              >
                <form
                  className=""
                  id="search-form"
                  onSubmit={[Function]}
                >
                  <InputGroup
                    size="lg"
                    tag="div"
                  >
                    <div
                      className="input-group input-group-lg"
                    >
                      <Label
                        className="sr-only"
                        for="search"
                        tag="label"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                      >
                        <label
                          className="sr-only  form-control-label"
                          htmlFor="search"
                        >
                          Search for Recipes
                        </label>
                      </Label>
                      <Input
                        id="search"
                        onChange={[Function]}
                        placeholder="Curried Chicken Gravy..."
                        tag="p"
                        type="text"
                        value=""
                      >
                        <input
                          className="form-control"
                          id="search"
                          onChange={[Function]}
                          placeholder="Curried Chicken Gravy..."
                          type="text"
                          value=""
                        />
                      </Input>
                      <InputGroupButton
                        tag="div"
                      >
                        <div
                          className="input-group-btn"
                        >
                          <Button
                            className="search-btn"
                            color="secondary"
                            tag="button"
                            type="submit"
                          >
                            <button
                              className="search-btn btn btn-secondary"
                              onClick={[Function]}
                              type="submit"
                            >
                              <FontAwesome
                                name="search"
                              >
                                <span
                                  aria-hidden={true}
                                  className="fa fa-search"
                                />
                              </FontAwesome>
                            </button>
                          </Button>
                        </div>
                      </InputGroupButton>
                    </div>
                  </InputGroup>
                </form>
              </Form>
            </SearchForm>
          </div>
        </div>
        <Button
          className="btn-default btn-lg"
          color="secondary"
          id="home-add-recipe-btn"
          onClick={[Function]}
          tag="button"
          title="New Recipe"
        >
          <button
            className="btn-default btn-lg btn btn-secondary"
            id="home-add-recipe-btn"
            onClick={[Function]}
            title="New Recipe"
            type="button"
          >
            Add a New Recipe
          </button>
        </Button>
      </div>
    </div>
  </div>
</Hero>
`;
